--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -1,2 +1,5 @@
 <input type="text" [(ngModel)]="name">
 <p>{{ name }}</p>
+<app-servers></app-servers>
+<app-success-message></app-success-message>
+<app-error-message></app-error-message>
